fix overflow in cards and lightbox mobile

--- a/src/features/AdminPage/NewStreetcode/ArtGallery/components/ArtGallery/ArtGalleryAdminStyles.styles.scss
+++ b/src/features/AdminPage/NewStreetcode/ArtGallery/components/ArtGallery/ArtGalleryAdminStyles.styles.scss
@@ -107,16 +107,17 @@
     .imgTitle {
         @include mut.with-font();
         @include mut.rem-padded($bottom: 5px);
-        @include mut.truncated();
-        @include mut.with-font($font-size: 15px);
+        @include mut.truncated(2);
+        @include mut.with-font($font-size: 18px);
     }
 
     .imgDescription {
-        @include mut.with-font($font-size: 12px);
+        @include mut.with-font($font-size: 15px);
         @include mut.truncated();
     }
 
     .imgImg {
         border-radius: pxToRem(30px);
+        object-fit: cover;
     }
 }
